fixed spacing above search table in delete and update pages

--- a/_step3_staticHTML/static/css/del_element.css
+++ b/_step3_staticHTML/static/css/del_element.css
@@ -49,6 +49,9 @@ h2 {
 	margin-bottom: -23px;
 }
 
+.searchHeader {
+	margin-top: 0;
+}
 
 #selDelEleTable {
 	margin: auto;
